Updated signalr web

--- a/PulseBridge.Web/src/app/app.component.html
+++ b/PulseBridge.Web/src/app/app.component.html
@@ -1,3 +1,8 @@
+
+<p>
+  Connection status: <b>{{ connState() }}</b>
+</p>
+
 <div *ngFor="let m of messages()">
   <b>{{ m.user }}</b>: {{ m.message }}
 </div>
